--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -116,7 +116,7 @@
 	        			// ADVANCED MATCHING PARAMETERS 
                         email: 'email@example.com',
                             // phone_number: '+15551234567',
-                        phone_number: phone,
+                        phone_number: '+15551234567',
                         })		
 
              ttq.track("SubmitForm",{
