--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -119,14 +119,14 @@
                         phone_number: '+15551234567',
                         })		
 
-             ttq.track("SubmitForm",{
+             ttq.track("CompleteRegistration",{
 	        			// EVENT PARAMETERS 
                     description: 'user form submission',
                     status: 'User Stage - Form Submission',
                     query: 'N/A',
 	        		}) 
 
-            registrationComplete();
+            // registrationComplete();
 
         	    //END - PLACE YOUR FUNCTIONS IN THIS SECTION 
         	}		
