--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -121,9 +121,9 @@
 
              ttq.track("CompleteRegistration",{
 	        			// EVENT PARAMETERS 
-                    description: 'user form submission',
-                    status: 'User Stage - Form Submission',
-                    query: 'N/A',
+                    //description: 'user form submission',
+                    //status: 'User Stage - Form Submission',
+                    //query: 'N/A',
 	        		}) 
 
             // registrationComplete();
@@ -241,9 +241,9 @@
 
         		ttq.track("CompleteRegistration",{
                         // EVENT PARAMETERS 
-                    description: 'user registered',
-                    status: 'User Stage - Registration',
-                    query: 'N/A',
+                    // description: 'user registered',
+                    // status: 'User Stage - Registration',
+                    // query: 'N/A',
                     }) 
 
         		// END - PLACE YOUR FUNCTIONS IN THIS SECTION 
