--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -2,36 +2,25 @@
 <html>
 <head>
 
-  <!-- BEGIN TIKTOK BASE CODE -->
-  <script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MXNZCH');</script>
+<!-- End Google Tag Manager -->
 
-    !function (w, d, t) {
-      w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=
-      ["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e)
-      {t[e]=function()
-        {t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var
-          i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++
-            )ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var
-            i="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||
-            {},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new
-            Date,ttq._o=ttq._o||{},ttq._o[e]=n||
-            {};n=document.createElement("script");n.type="text/javascript",n.async=!0,n.src
-            =i+"?sdkid="+e+"&lib="+t;e=document.getElementsByTagName("script")
-            [0];e.parentNode.insertBefore(n,e)};
-            ttq.load('CDTPQQBC77U93DJGNN8G');
-            ttq.page();
-          }(window, document, 'ttq');
-
-          console.log("pixel base initialized");
-
-
-
-        </script> 
-        <!-- END TIKTOK BASE CODE -->
+	
 
         <title>Hello World | Store</title>
       </head>
       <body>
+	      <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXNZCH"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+	      
        <div class="content">
         <header>
          <h1 class="title">Hello World | Store</h1>
