--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -198,7 +198,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
              external_id: 'EXT-123', 
            })		
 
-        		ttq.track("ViewContent",{
+        		ttq.track("CustomViewContent",{
               contents: [
               {
                 content_id: productId,
