--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -186,8 +186,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         		// END HINT: UTILIZE THESE VARIABLES WHEN CONSTRUCTING YOUR CORRESPONDING TIKTOK PIXEL EVENT
 
 
-			dataLayer.push({'event': 'ViewContent'});
-			dataLayer.push({'product': 'productId'});
+			dataLayer.push({'event': 'DL-ViewContent'});
+			dataLayer.push({'product': productId});
 				
 
         		// BEGIN - PLACE YOUR FUNCTIONS IN THIS SECTION 
