--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -186,7 +186,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         		// END HINT: UTILIZE THESE VARIABLES WHEN CONSTRUCTING YOUR CORRESPONDING TIKTOK PIXEL EVENT
 
 
-			dataLayer.push({'event': 'DL-ViewContent'});
+			dataLayer.push({'event': 'GTM-ViewContent'});
 			dataLayer.push({'product': productId});
 				
 
