--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -149,7 +149,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               external_id: 'EXT-123',
             })		
 
-        		ttq.track("AddToCart",{
+
+	dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
+		dataLayer.push({
+		  'event': 'addToCart',
+		  'ecommerce': {
+		    'currencyCode': 'EUR',
+		    'add': {                                // 'add' actionFieldObject measures.
+		      'products': [{                        //  adding a product to a shopping cart.
+		        'name': 'Triblend Android T-Shirt',
+		        'id': '12345',
+		        'price': '15.25',
+		        'brand': 'Google',
+		        'category': 'Apparel',
+		        'variant': 'Gray',
+		        'quantity': 1
+		       }]
+		    }
+		  }
+		});
+
+        		ttq.track("CustomAddToCart",{
         			contents: [
               {
                 content_id: productId,
