--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -152,7 +152,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
 		dataLayer.push({
-		  'event': 'addToCart',
+		  'event': 'GTM-AddToCart',
 		  'ecommerce': {
 		    'currencyCode': 'EUR',
 		    'add': {                                // 'add' actionFieldObject measures.
