--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-//'GTM-MXNZCH' - web container
+
+	<!-- 'GTM-MXNZCH' - web container -->
+
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
