--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -207,12 +207,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         		console.log("productId:" + " " + productId);
         		// END HINT: UTILIZE THESE VARIABLES WHEN CONSTRUCTING YOUR CORRESPONDING TIKTOK PIXEL EVENT
 
-
-			//dataLayer.push({'event': 'GTM-ViewContent'});
-			//??dataLayer.push({'product': productId});
+			dataLayer.push({ email: xyz@gmail.com });
 			dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
 			dataLayer.push({
-			  'event': 'GTM-ViewContent',
+			  'event': 'view_item',
 			  'ecommerce': {
 			    'detail': {
 			      'actionField': {'list': 'Apparel Gallery'},    // 'detail' actions have an optional list property.
