--- a/hello-world-shop-excercise.html
+++ b/hello-world-shop-excercise.html
@@ -207,7 +207,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         		console.log("productId:" + " " + productId);
         		// END HINT: UTILIZE THESE VARIABLES WHEN CONSTRUCTING YOUR CORRESPONDING TIKTOK PIXEL EVENT
 
-			dataLayer.push({ email: xyz@gmail.com });
+			dataLayer.push({ email: 'xyz@gmail.com' });
 			dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
 			dataLayer.push({
 			  'event': 'view_item',
